    parallel_cell module.
    - parallel_fsf_solver completed and run.
    - 2d dam break parallel version written.
    - parallel property updater component added.
Thursday 17 December 2009 (07:01:18 PM)
    - timing module added.
Thursday 17 December 2009 (09:24:07 PM)
    - global time step update component.
    - bug in computing speed of sound parallely rectified.
Friday 18 December 2009 (05:41:06 PM)
    - bug in computing adjacent remote cells resolved.
    - force update of parallel cell manager along with update status.
    - time step component does not compute sigms for dummy particles.
Monday 21 December 2009 (10:55:03 PM)
    - processor map uses cells directly from the root_cells children rather
      than the hierarchy_list - this hierarchy list only gets updated after the
      root cells update call, within which the load balance could be called
      multiple times.
    - function to construct face neighbors.
    - load balancer class added.
    - function to update neighbor information after some local changes added.
    - dimension attribute added to ParallelCellManager to test for boundary
      cells properly.
Thursday 24 December 2009 (06:04:12 PM)
    - superficial changes - nothing major.
Wednesday 30 December 2009 (03:48:54 PM)
    - parallel component to add particle property requirements for parallel
    simulations.
    - parallel vtk writer component to write VTK files in a parallel
    simulation.
Friday 08 January 2010 (01:10:01 AM)
    - code for measuring performance gain from parallel simulations. 
Friday 08 January 2010 (10:02:22 AM)
    - code for timing serial code (to compare results with serial case.)
Wednesday 13 January 2010 (10:36:19 PM)
    - added command line arguments to the timing code.
Thursday 14 January 2010 (1:15:30 PM)
    - load balance checks if particles change during a load balance iteration.
      if not - load balancing iterations are stopped.
    - dummy solver added to serial_code_timing.py in the repo.