@@ -246,3 +246,6 @@ Thursday 14 January 2010 (1:15:30 PM)
     - load balance checks if particles change during a load balance iteration.
       if not - load balancing iterations are stopped.
     - dummy solver added to serial_code_timing.py in the repo.
+Tuesday 19 January 2010 (11:59:22 PM)
+    - load balance component added.
+    - some timing measurement code for report.
